# imc-prosperity-2-backtester

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
example/: datamodel.py  empty.py  starter.py
prosperity2bt/: __main__.py  constants.py  core.py  data.py  file_reader.py  main.py  models.py  runner.py
prosperity2bt/components/: basic_products.py  orchids.py
prosperity2bt/resources/round0/: prices_round_0_day_-2.csv  trades_round_0_day_-2_nn.csv
prosperity2bt/resources/round1/: prices_round_1_day_-1.csv  prices_round_1_day_-2.csv  prices_round_1_day_0.csv  trades_round_1_day_-1_nn.csv  trades_round_1_day_-1_wn.csv  trades_round_1_day_-2_nn.csv  trades_round_1_day_-2_wn.csv  trades_round_1_day_0_nn.csv  trades_round_1_day_0_wn.csv
prosperity2bt/resources/round2/: prices_round_2_day_-1.csv  prices_round_2_day_0.csv  prices_round_2_day_1.csv
prosperity2bt/resources/round3/: prices_round_3_day_0.csv  prices_round_3_day_1.csv  prices_round_3_day_2.csv  trades_round_3_day_0_nn.csv  trades_round_3_day_0_wn.csv  trades_round_3_day_1_nn.csv  trades_round_3_day_1_wn.csv  trades_round_3_day_2_nn.csv  trades_round_3_day_2_wn.csv
prosperity2bt/resources/round4/: prices_round_4_day_1.csv  prices_round_4_day_2.csv  prices_round_4_day_3.csv  trades_round_4_day_1_nn.csv  trades_round_4_day_1_wn.csv  trades_round_4_day_2_nn.csv  trades_round_4_day_2_wn.csv  trades_round_4_day_3_nn.csv  trades_round_4_day_3_wn.csv
prosperity2bt/resources/round6/: README.md  prices_round_6_day_1.csv  prices_round_6_day_2.csv  prices_round_6_day_3.csv  (+2 more)
(+3 files in other folders)
